--- a/client/components/HUD/auth/auth.css
+++ b/client/components/HUD/auth/auth.css
@@ -37,12 +37,14 @@
   padding: 15px 10px;
   margin-bottom: 10px;
   border : 5px solid black;
+  text-transform: lowercase;
 }
 
 .authPassword{
   font-size: 20px;
   padding: 15px 10px;
   margin-bottom: 10px;
+  text-transform: lowercase;
   border : 5px solid black;
 }
 
