Changed register color

--- a/client/components/HUD/auth/auth.css
+++ b/client/components/HUD/auth/auth.css
@@ -60,7 +60,7 @@
 
 .authRegister{
   border : 5px solid white;
-  background-color: rgb(195, 36, 141);
+  background-color: #ac49a2;
   padding: 10px;
   width : 100%;
   text-align: center;
