--- a/client/components/HUD/auth/auth.css
+++ b/client/components/HUD/auth/auth.css
@@ -10,6 +10,20 @@
   color : white;
 }
 
+.authErrorContainer{
+  background-color: #e0e0e0;
+  border: 3px solid #c81c1c;
+  border-radius: 10px;
+  color : #c81c1c;
+  font-size: 15px;
+  text-align: center;
+  padding: 5px;
+  width: 80%;
+  margin-bottom: 30px;
+  display: none;
+}
+
+
 .authLabelContainer{
   display: flex;
   flex-direction: column;
