--- a/client/components/HUD/auth/auth.pug
+++ b/client/components/HUD/auth/auth.pug
@@ -3,6 +3,8 @@ link(href='/components/HUD/auth/auth.css' rel='stylesheet' )
 script(src='/components/HUD/auth/auth.js')
 
 .authContainer
+  .authErrorContainer
+    .authError Incorrect Username or Password
   .authLabelContainer
     .authLabel Valoria
   .authForm
