--- a/client/components/HUD/object/object.css
+++ b/client/components/HUD/object/object.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .objectPreview{
