Got rid of darker highlight on tap

--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -25,6 +25,7 @@ img{
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .environment{
