--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -17,7 +17,7 @@ img{
   /*left : -50000;
   top : -50000;*/
   background-position: 0px 0px;
-  background-image: url("https://i.imgur.com/a4ycklR.png");
+  background-image: url("https://i.imgur.com/TbwEvfU.png");
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
