Dimension doors now work again.

--- a/client/components/dimension/thing/door/door.pug
+++ b/client/components/dimension/thing/door/door.pug
@@ -21,4 +21,4 @@ script(src='/components/dimension/thing/door/door.js')
     .doorInputBtn Open Door to Dimension
   .doorDimensionContainer
     .doorText
-    iframe.doorDimension
+    .doorDimension
