--- a/client/components/HUD/auth/auth.css
+++ b/client/components/HUD/auth/auth.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   font-family: futura;
   color : white;
 }
