Added jqueryui touch punch

--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -5,6 +5,8 @@ script(src='/imports/jquery-3.3.1.min.js')
 //Jquery-UI
 link(rel='stylesheet' href='/imports/jquery-ui.min.css')
 script(src='/imports/jquery-ui.min.js')
+//Jquery-UI-touch-punch
+script(src='/imports/jquery.ui.touch-punch.min.js')
 //FlexBox
 link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
 //Spectrum
