--- a/client/components/HUD/HUD.css
+++ b/client/components/HUD/HUD.css
@@ -17,16 +17,20 @@
 
 #menu{
   width : 100%;
+  max-width: 600px;
   height : 100%;
+  max-height: 600px;
   background: #5d8c73;
   box-shadow: 0px 0px 10px 10px #62ed89;
-  /*border-radius : 25px;*/
+  border-radius : 25px;
   pointer-events: all;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around
 }
+
+
 
 #scrollZones{
   width : 100%;
@@ -172,4 +176,11 @@
   width : 25%;
   height : 100%;
   /*border : 2px solid blue;*/
+}
+
+@media only screen and (max-width: 600px) {
+  #menu{
+    max-height: none;
+    border-radius: 0px;
+  }
 }
