--- a/client/components/HUD/HUD.pug
+++ b/client/components/HUD/HUD.pug
@@ -13,23 +13,24 @@ script(src='/components/HUD/HUD.js')
       else
         //- include landing/landing
         include auth/auth
+  include nav/nav
       //- include images
-  #scrollZones
-    #horizontalScrollZones
-      #leftZones
-        #leftUpScrollZone.scrollZone(direction='upleft')
-        #leftScrollZone.scrollZone(direction='left')
-        #leftDownScrollZone.scrollZone(direction='downleft')
-      #rightZones
-        #rightUpScrollZone.scrollZone(direction='upright')
-        #rightScrollZone.scrollZone(direction='right')
-        #rightDownScrollZone.scrollZone(direction='downright')
-    #verticalScrollZones
-      #upZones
-        #upLeftScrollZone.scrollZone(direction='upleft')
-        #upScrollZone.scrollZone(direction='up')
-        #upRightScrollZone.scrollZone(direction='upright')
-      #downZones
-        #downLeftScrollZone.scrollZone(direction='downleft')
-        #downScrollZone.scrollZone(direction='down')
-        #downRightScrollZone.scrollZone(direction='downright')
+  //- #scrollZones
+  //-   #horizontalScrollZones
+  //-     #leftZones
+  //-       #leftUpScrollZone.scrollZone(direction='upleft')
+  //-       #leftScrollZone.scrollZone(direction='left')
+  //-       #leftDownScrollZone.scrollZone(direction='downleft')
+  //-     #rightZones
+  //-       #rightUpScrollZone.scrollZone(direction='upright')
+  //-       #rightScrollZone.scrollZone(direction='right')
+  //-       #rightDownScrollZone.scrollZone(direction='downright')
+  //-   #verticalScrollZones
+  //-     #upZones
+  //-       #upLeftScrollZone.scrollZone(direction='upleft')
+  //-       #upScrollZone.scrollZone(direction='up')
+  //-       #upRightScrollZone.scrollZone(direction='upright')
+  //-     #downZones
+  //-       #downLeftScrollZone.scrollZone(direction='downleft')
+  //-       #downScrollZone.scrollZone(direction='down')
+  //-       #downRightScrollZone.scrollZone(direction='downright')
