--- a/client/components/HUD/menu/menuSelect.pug
+++ b/client/components/HUD/menu/menuSelect.pug
@@ -41,4 +41,6 @@ script(src='/components/HUD/menu/menuSelect.js')
         img.menuSelectionImg
       .menuSelectionLabelContainer
         .menuSelectionLabel Create New Dimension
-  .logoutBtn Log Out
+  .menuBtns
+    .logoutBtn Log Out
+    .closeMenuBtn Close Menu
