--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -33,6 +33,7 @@ if !doorRender
       .things
       .users
       .objects
+    //iframe.music(allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/148056341&auto_play=true")
   #thisUser
     img#thisUserAvatar
   include thing/door/door
