--- a/client/components/HUD/menu/menuSelect.css
+++ b/client/components/HUD/menu/menuSelect.css
@@ -8,12 +8,18 @@
 }
 
 .menuOptions{
+  overflow-y: scroll;
+  background-color: #557062;
+  height : 450px;
   width : 100%;
   display: flex;
   flex-direction: row;
   flex-wrap : wrap;
   justify-content: space-around;
   align-items: center;
+  padding: 10px 0px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .menuSelection{
@@ -85,7 +91,7 @@
   padding : 10px;
   cursor: pointer;
   width: 100px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .logoutBtn:hover{
