Mobile now moves with drag

--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -7,6 +7,8 @@ link(rel='stylesheet' href='/imports/jquery-ui.min.css')
 script(src='/imports/jquery-ui.min.js')
 //Jquery-UI-touch-punch
 script(src='/imports/jquery.ui.touch-punch.min.js')
+//Jquery-Draggable-Backgrounds
+script(src='/imports/dragbg.js')
 //FlexBox
 link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
 //Spectrum
