--- a/client/components/HUD/nav/nav.pug
+++ b/client/components/HUD/nav/nav.pug
@@ -2,15 +2,16 @@ link(rel='stylesheet', href='/components/HUD/nav/nav.css')
 script(src='/components/HUD/nav/nav.js')
 
 .nav
-  .verticalMoveBtns
-    .moveUpBtn.moveBtn
-      .moveBtnLabel Up
-    .moveDownBtn.moveBtn
-      .moveBtnLabel Down
+  //- .verticalMoveBtns
+  //-   .moveUpBtn.moveBtn
+  //-     .moveBtnLabel Up
+  //-   .moveDownBtn.moveBtn
+  //-     .moveBtnLabel Down
+  
   .navMenuBtn
     .navMenuBtnLabel Menu
-  .horizontalMoveBtns
-    .moveLeftBtn.moveBtn
-      .moveBtnLabel Left
-    .moveRightBtn.moveBtn
-      .moveBtnLabel Right
+  //- .horizontalMoveBtns
+  //-   .moveLeftBtn.moveBtn
+  //-     .moveBtnLabel Left
+  //-   .moveRightBtn.moveBtn
+  //-     .moveBtnLabel Right
