--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -26,7 +26,7 @@ img{
   -o-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  overscroll-behavior-y:contain;
+  overscroll-behavior-y:none;
 }
 
 .environment{
