can we code in valoria?

--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -15,6 +15,7 @@ if !doorRender
   if !doorRender
     include thing/livechat/livechat
     include thing/text/text
+    include thing/code/code
     .thing.prototype.square
       .thingToolbox
         .thingTools
