See if this fixes mobile swipe bounces

--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -9,11 +9,14 @@ script(src='/imports/jquery-ui.min.js')
 script(src='/imports/jquery.ui.touch-punch.min.js')
 //Jquery-Draggable-Backgrounds
 script(src='/imports/dragbg.js')
-//FlexBox
-link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
 //Spectrum
 link(rel='stylesheet' href='/imports/spectrum.css')
 script(src='/imports/spectrum.js')
+//Code-Mirror
+link(rel='stylesheet' href='/imports/hopscotch.css')
+link(rel='stylesheet' href='/imports/codemirror.css')
+script(src='/imports/codemirror.js')
+script(src='/imports/codemirrorjs.js')
 //Quill
 link(href='https://cdn.quilljs.com/1.3.6/quill.snow.css', rel='stylesheet')
 script(src='https://cdn.quilljs.com/1.3.6/quill.js')
