--- a/client/components/HUD/thing/thingSelect.pug
+++ b/client/components/HUD/thing/thingSelect.pug
@@ -18,3 +18,9 @@ script(src='/components/HUD/thing/thingSelect.js')
         img.thingSelectionImg
       .thingSelectionLabelContainer
         .thingSelectionLabel Spawn a Dimensional Door
+  if currentUser.admin
+    #codeThingSelect.thingSelection
+      .thingSelectionImgContainer
+        img.thingSelectionImg
+      .thingSelectionLabelContainer
+        .thingSelectionLabel Spawn a Code
