--- a/client/components/dimension/thing/code/code.pug
+++ b/client/components/dimension/thing/code/code.pug
@@ -2,5 +2,18 @@ link(rel='stylesheet' href='/components/dimension/thing/code/code.css')
 script(src='/components/dimension/thing/code/code.js')
 script(src='/components/dimension/thing/code/test.js')
 
-.code.thing#code0
+.code.thing.prototype
+  .thingToolbox
+    .thingTools
+      input.thingColorInput
+      .thingMediaBtn Media
+      .thingDeleteBtn Delete
+    .thingMediaContainer
+      .thingImageForm
+        input.thingImageInput(placeholder="Link to Image")
+        .thingImageInputBtn Set to Image
+      .thingVideoForm
+        input.thingVideoInput(placeholder="Link to Video")
+        .thingVideoInputBtn Embed Video
+  iframe.thingVideo
   .codeContainer
