--- a/client/components/dimension/thing/livechat/livechat.pug
+++ b/client/components/dimension/thing/livechat/livechat.pug
@@ -1,19 +1,6 @@
 link(rel='stylesheet' href='/components/dimension/thing/livechat/livechat.css')
 script(src='/components/dimension/thing/livechat/livechat.js')
-.livechat.prototype.thing
-  .thingToolbox
-    .thingTools
-      input.thingColorInput
-      .thingMediaBtn Media
-      .thingDeleteBtn Delete
-    .thingMediaContainer
-      .thingImageForm
-        input.thingImageInput(placeholder="Link to Image")
-        .thingImageInputBtn Set to Image
-      .thingVideoForm
-        input.thingVideoInput(placeholder="Link to Video")
-        .thingVideoInputBtn Embed Video
-  iframe.thingVideo
+.livechat.prototype
   .livechatTop
     .livechatHeader(contenteditable="true") Live Chat
     .livechatMessageContainer
