--- a/client/components/dimension/thing/code/code.css
+++ b/client/components/dimension/thing/code/code.css
@@ -1,9 +1,6 @@
 .code{
-  width : 500px;
-  height: 500px;
-  top : 50px;
-  left : 50px;
-  position: absolute;
+  width : 100%;
+  height:100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
