--- a/client/components/dimension/thing/door/door.css
+++ b/client/components/dimension/thing/door/door.css
@@ -1,12 +1,11 @@
 .door{
-  width : 300px;
-  height : 300px;
-  position: absolute;
+  width : 100%;
+  height : 100%;
   z-index: 5;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*justify-content: center;*/
+  justify-content: center;
 }
 
 .doorForm{
