--- a/client/components/dimension/thing/livechat/livechat.css
+++ b/client/components/dimension/thing/livechat/livechat.css
@@ -1,20 +1,14 @@
 .livechat {
-  background-color: #557062;
-  width : 300px;
-  height : 300px;
+  width: 100%;
+  height: 100%;
   display: none;
-  position: absolute;
   z-index: 4;
-  top : 50000px;
-  left : 50000px;
   font-size : 18px;
   font-family: futura;
   font-weight: bold;
   flex-direction: column;
   flex: auto;
   justify-content: space-between;
-  align-items: center;
-  color : white;
 }
 
 .livechatTop{
