--- a/client/components/HUD/thing/thingSelect.css
+++ b/client/components/HUD/thing/thingSelect.css
@@ -17,8 +17,8 @@
 }
 
 .thingSelection{
-  width : 15%;
-  height : 30%;
+  width : 150px;
+  height : 150px;
   /*border : 2px solid yellow;*/
   display: flex;
   flex-direction: column;
