--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -13,6 +13,8 @@ script(src='/components/dimension/object/object.js')
     .things
     .users
     .objects
+  audio.voiceStream(autoplay="autoplay")
+    source
       
   #thisUser
     img#thisUserAvatar
