--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -17,6 +17,8 @@ link(rel='stylesheet' href='/imports/hopscotch.css')
 link(rel='stylesheet' href='/imports/codemirror.css')
 script(src='/imports/codemirror.js')
 script(src='/imports/codemirrorjs.js')
+//PeerJs
+script(src='/imports/peer.min.js')
 //Quill
 link(href='https://cdn.quilljs.com/1.3.6/quill.snow.css', rel='stylesheet')
 script(src='https://cdn.quilljs.com/1.3.6/quill.js')
