--- a/client/components/HUD/thing/thingSelect.css
+++ b/client/components/HUD/thing/thingSelect.css
@@ -9,6 +9,7 @@
 
 .thingSelectOptions{
   width : 100%;
+  height: 500px;
   display: flex;
   flex-direction: row;
   flex-wrap : wrap;
@@ -19,7 +20,6 @@
 .thingSelection{
   width : 150px;
   height : 150px;
-  /*border : 2px solid yellow;*/
   display: flex;
   flex-direction: column;
   border : 2px solid white;
