--- a/client/components/dimension/thing/thing.pug
+++ b/client/components/dimension/thing/thing.pug
@@ -7,6 +7,7 @@ include livechat/livechat
 include text/text
 include code/code
 include door/door
+include console/console
 
 .thing.prototype
   .thingToolbox
