Made fixed things. So far only the console is fixed

--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -71,3 +71,14 @@ img{
   top : 50;
   left : 50;
 }
+
+.movingEnvironment{
+  position: absolute;
+}
+
+.fixedEnvironment{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
