--- a/client/components/dimension/thing/thing.css
+++ b/client/components/dimension/thing/thing.css
@@ -1,6 +1,6 @@
 .thing{
   width : 100px;
-  height: 100px;
+  min-height: 100px;
   background-color: #557062;
   position: absolute;
   top : 50000px;
@@ -17,6 +17,7 @@
   justify-content: center;
   align-items: center;
   z-index: 5;
+  pointer-events: all;
 }
 
 .thingToolbox{
